fixed sign out link on sightings new page as it had the wrong action associated with it. So when you clicked on sign out from that page it would break the app.

--- a/app/assets/stylesheets/sightings.css
+++ b/app/assets/stylesheets/sightings.css
@@ -5,7 +5,7 @@
 
 div.disappear {
 	position: absolute;
-	left: 39%;
+	left: 44%;
 	top: 3px;
 }
 
